# lkr

./: README.md  pyproject.toml
doc/: DESIGN.md
examples/demo-kb/: .gitignore  README.md
examples/demo-kb/.knowledge/: config.yaml
examples/demo-kb/entries/1f/: 1f0tevi2.md
examples/demo-kb/entries/1q/: 1qtmorq2.md
examples/demo-kb/entries/68/: 68tfu7mo.md
examples/demo-kb/entries/6p/: 6p4gmcoa.md
src/lkr/: __init__.py  cli.py  console.py  entry.py  errors.py  idgen.py  index.py  models.py  repo.py  search.py  templates.py  validate.py
tests/: conftest.py  test_cli.py  test_entry.py  test_idgen.py  test_index.py  test_models.py  test_search.py  test_validate.py
